--- a/ui/mainwindow_mk2.ui
+++ b/ui/mainwindow_mk2.ui
@@ -129,6 +129,13 @@
                 </widget>
                </item>
                <item>
+                <widget class="QPushButton" name="move_pos_button">
+                 <property name="text">
+                  <string>Move to Position</string>
+                 </property>
+                </widget>
+               </item>
+               <item>
                 <spacer name="horizontalSpacer_2">
                  <property name="orientation">
                   <enum>Qt::Horizontal</enum>
@@ -142,61 +149,21 @@
                 </spacer>
                </item>
                <item>
-                <widget class="QPushButton" name="move_pos_button">
+                <widget class="QLabel" name="label_3">
                  <property name="text">
-                  <string>Move to Position</string>
-                 </property>
-                </widget>
-               </item>
-              </layout>
-             </item>
-             <item>
-              <layout class="QHBoxLayout" name="horizontalLayout_9">
-               <property name="leftMargin">
-                <number>5</number>
-               </property>
-               <property name="topMargin">
-                <number>5</number>
-               </property>
-               <property name="rightMargin">
-                <number>5</number>
-               </property>
-               <property name="bottomMargin">
-                <number>5</number>
-               </property>
-               <item>
-                <widget class="QLabel" name="mancon_prefix_label">
-                 <property name="text">
-                  <string>Data file prefix:</string>
+                  <string>Samples:</string>
                  </property>
                 </widget>
                </item>
                <item>
-                <widget class="QLineEdit" name="mancon_prefix_lineedit">
-                 <property name="font">
-                  <font>
-                   <family>Consolas</family>
-                   <pointsize>12</pointsize>
-                   <underline>false</underline>
-                  </font>
+                <widget class="QSpinBox" name="samples_set_spinbox">
+                 <property name="minimum">
+                  <number>1</number>
                  </property>
-                 <property name="text">
-                  <string>manual</string>
+                 <property name="maximum">
+                  <number>99</number>
                  </property>
                 </widget>
-               </item>
-               <item>
-                <spacer name="horizontalSpacer_7">
-                 <property name="orientation">
-                  <enum>Qt::Horizontal</enum>
-                 </property>
-                 <property name="sizeHint" stdset="0">
-                  <size>
-                   <width>40</width>
-                   <height>20</height>
-                  </size>
-                 </property>
-                </spacer>
                </item>
                <item>
                 <widget class="QPushButton" name="collect_data_button">
@@ -385,50 +352,7 @@
                 <number>5</number>
                </property>
                <item>
-                <widget class="QLabel" name="scancon_prefix_label">
-                 <property name="text">
-                  <string>Data file prefix:</string>
-                 </property>
-                </widget>
-               </item>
-               <item>
-                <widget class="QLineEdit" name="scancon_prefix_lineedit">
-                 <property name="font">
-                  <font>
-                   <family>Consolas</family>
-                   <pointsize>12</pointsize>
-                  </font>
-                 </property>
-                 <property name="text">
-                  <string>automatic</string>
-                 </property>
-                </widget>
-               </item>
-               <item>
                 <spacer name="horizontalSpacer_5">
-                 <property name="orientation">
-                  <enum>Qt::Horizontal</enum>
-                 </property>
-                 <property name="sizeHint" stdset="0">
-                  <size>
-                   <width>40</width>
-                   <height>20</height>
-                  </size>
-                 </property>
-                </spacer>
-               </item>
-               <item>
-                <widget class="QCheckBox" name="save_data_checkbox">
-                 <property name="text">
-                  <string>Save Data</string>
-                 </property>
-                 <property name="tristate">
-                  <bool>false</bool>
-                 </property>
-                </widget>
-               </item>
-               <item>
-                <spacer name="horizontalSpacer_6">
                  <property name="orientation">
                   <enum>Qt::Horizontal</enum>
                  </property>
@@ -453,6 +377,35 @@
                  </property>
                 </widget>
                </item>
+               <item>
+                <widget class="QFrame" name="frame">
+                 <property name="minimumSize">
+                  <size>
+                   <width>50</width>
+                   <height>0</height>
+                  </size>
+                 </property>
+                 <property name="frameShape">
+                  <enum>QFrame::StyledPanel</enum>
+                 </property>
+                 <property name="frameShadow">
+                  <enum>QFrame::Raised</enum>
+                 </property>
+                </widget>
+               </item>
+               <item>
+                <widget class="QPushButton" name="stop_scan_button">
+                 <property name="minimumSize">
+                  <size>
+                   <width>130</width>
+                   <height>0</height>
+                  </size>
+                 </property>
+                 <property name="text">
+                  <string>Stop Scan</string>
+                 </property>
+                </widget>
+               </item>
               </layout>
              </item>
             </layout>
@@ -461,7 +414,7 @@
          </widget>
         </item>
         <item>
-         <layout class="QVBoxLayout" name="verticalLayout_2" stretch="5,1">
+         <layout class="QVBoxLayout" name="verticalLayout_2" stretch="1,0">
           <property name="leftMargin">
            <number>5</number>
           </property>
@@ -475,17 +428,7 @@
            <number>5</number>
           </property>
           <item>
-           <widget class="QFrame" name="frame_3">
-            <property name="cursor">
-             <cursorShape>ArrowCursor</cursorShape>
-            </property>
-            <property name="frameShape">
-             <enum>QFrame::StyledPanel</enum>
-            </property>
-            <property name="frameShadow">
-             <enum>QFrame::Raised</enum>
-            </property>
-           </widget>
+           <widget class="QTableView" name="tableView"/>
           </item>
           <item>
            <layout class="QHBoxLayout" name="horizontalLayout_3">
@@ -502,32 +445,6 @@
              <number>5</number>
             </property>
             <item>
-             <widget class="QLabel" name="save_dir_label">
-              <property name="font">
-               <font>
-                <family>Segoe UI Semibold</family>
-                <pointsize>12</pointsize>
-               </font>
-              </property>
-              <property name="text">
-               <string>Save directory:</string>
-              </property>
-             </widget>
-            </item>
-            <item>
-             <widget class="QLineEdit" name="save_dir_lineedit">
-              <property name="font">
-               <font>
-                <family>Segoe UI</family>
-                <pointsize>10</pointsize>
-               </font>
-              </property>
-              <property name="text">
-               <string extracomment="Data file save directory."/>
-              </property>
-             </widget>
-            </item>
-            <item>
              <spacer name="horizontalSpacer">
               <property name="orientation">
                <enum>Qt::Horizontal</enum>
@@ -541,32 +458,6 @@
              </spacer>
             </item>
             <item>
-             <widget class="QPushButton" name="save_plot_button">
-              <property name="font">
-               <font>
-                <family>Segoe UI Semibold</family>
-                <pointsize>12</pointsize>
-               </font>
-              </property>
-              <property name="text">
-               <string>Plot</string>
-              </property>
-             </widget>
-            </item>
-            <item>
-             <widget class="QPushButton" name="save_data_button">
-              <property name="font">
-               <font>
-                <family>Segoe UI Semibold</family>
-                <pointsize>12</pointsize>
-               </font>
-              </property>
-              <property name="text">
-               <string>Data</string>
-              </property>
-             </widget>
-            </item>
-            <item>
              <widget class="QPushButton" name="save_config_button">
               <property name="font">
                <font>
@@ -575,7 +466,7 @@
                </font>
               </property>
               <property name="text">
-               <string>Config</string>
+               <string>Machine Configuration</string>
               </property>
              </widget>
             </item>
@@ -614,7 +505,7 @@
          </widget>
         </item>
         <item>
-         <layout class="QHBoxLayout" name="horizontalLayout_2" stretch="3,0">
+         <layout class="QHBoxLayout" name="horizontalLayout_2" stretch="0">
           <property name="leftMargin">
            <number>5</number>
           </property>
@@ -628,175 +519,17 @@
            <number>5</number>
           </property>
           <item>
-           <layout class="QGridLayout" name="gridLayout_4" columnstretch="0,1,0,1">
-            <property name="leftMargin">
-             <number>5</number>
-            </property>
-            <property name="topMargin">
-             <number>5</number>
-            </property>
-            <property name="rightMargin">
-             <number>5</number>
-            </property>
-            <property name="bottomMargin">
-             <number>5</number>
-            </property>
-            <item row="1" column="0">
-             <widget class="QLabel" name="ymin_label">
-              <property name="sizePolicy">
-               <sizepolicy hsizetype="MinimumExpanding" vsizetype="Preferred">
-                <horstretch>0</horstretch>
-                <verstretch>0</verstretch>
-               </sizepolicy>
+           <layout class="QHBoxLayout" name="horizontalLayout_7" stretch="2,1,1">
+            <item>
+             <widget class="QFrame" name="frame_2">
+              <property name="frameShape">
+               <enum>QFrame::StyledPanel</enum>
               </property>
-              <property name="font">
-               <font>
-                <family>Segoe UI</family>
-                <pointsize>11</pointsize>
-               </font>
-              </property>
-              <property name="text">
-               <string>Y&lt;sub&gt;min&lt;/sub&gt;</string>
+              <property name="frameShadow">
+               <enum>QFrame::Raised</enum>
               </property>
              </widget>
             </item>
-            <item row="0" column="2">
-             <widget class="QLabel" name="xmax_label">
-              <property name="sizePolicy">
-               <sizepolicy hsizetype="MinimumExpanding" vsizetype="Preferred">
-                <horstretch>0</horstretch>
-                <verstretch>0</verstretch>
-               </sizepolicy>
-              </property>
-              <property name="font">
-               <font>
-                <family>Segoe UI</family>
-                <pointsize>11</pointsize>
-               </font>
-              </property>
-              <property name="text">
-               <string>X&lt;sub&gt;max&lt;/sub&gt;</string>
-              </property>
-             </widget>
-            </item>
-            <item row="1" column="2">
-             <widget class="QLabel" name="ymax_label">
-              <property name="sizePolicy">
-               <sizepolicy hsizetype="MinimumExpanding" vsizetype="Preferred">
-                <horstretch>0</horstretch>
-                <verstretch>0</verstretch>
-               </sizepolicy>
-              </property>
-              <property name="font">
-               <font>
-                <family>Segoe UI</family>
-                <pointsize>11</pointsize>
-               </font>
-              </property>
-              <property name="text">
-               <string>Y&lt;sub&gt;max&lt;/max&gt;</string>
-              </property>
-             </widget>
-            </item>
-            <item row="0" column="0">
-             <widget class="QLabel" name="xmin_label">
-              <property name="sizePolicy">
-               <sizepolicy hsizetype="MinimumExpanding" vsizetype="Preferred">
-                <horstretch>0</horstretch>
-                <verstretch>0</verstretch>
-               </sizepolicy>
-              </property>
-              <property name="font">
-               <font>
-                <family>Segoe UI</family>
-                <pointsize>11</pointsize>
-               </font>
-              </property>
-              <property name="text">
-               <string>X&lt;sub&gt;min&lt;/sub&gt;</string>
-              </property>
-             </widget>
-            </item>
-            <item row="0" column="1">
-             <widget class="QLineEdit" name="xmin_in">
-              <property name="sizePolicy">
-               <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
-                <horstretch>0</horstretch>
-                <verstretch>0</verstretch>
-               </sizepolicy>
-              </property>
-              <property name="font">
-               <font>
-                <family>Segoe UI</family>
-                <pointsize>10</pointsize>
-               </font>
-              </property>
-             </widget>
-            </item>
-            <item row="1" column="1">
-             <widget class="QLineEdit" name="ymin_in">
-              <property name="sizePolicy">
-               <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
-                <horstretch>0</horstretch>
-                <verstretch>0</verstretch>
-               </sizepolicy>
-              </property>
-              <property name="font">
-               <font>
-                <family>Segoe UI</family>
-                <pointsize>10</pointsize>
-               </font>
-              </property>
-             </widget>
-            </item>
-            <item row="0" column="3">
-             <widget class="QLineEdit" name="xmax_in">
-              <property name="sizePolicy">
-               <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
-                <horstretch>0</horstretch>
-                <verstretch>0</verstretch>
-               </sizepolicy>
-              </property>
-              <property name="font">
-               <font>
-                <family>Segoe UI</family>
-                <pointsize>10</pointsize>
-               </font>
-              </property>
-             </widget>
-            </item>
-            <item row="1" column="3">
-             <widget class="QLineEdit" name="ymax_in">
-              <property name="sizePolicy">
-               <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
-                <horstretch>0</horstretch>
-                <verstretch>0</verstretch>
-               </sizepolicy>
-              </property>
-              <property name="font">
-               <font>
-                <family>Segoe UI</family>
-                <pointsize>10</pointsize>
-               </font>
-              </property>
-             </widget>
-            </item>
-           </layout>
-          </item>
-          <item>
-           <layout class="QVBoxLayout" name="verticalLayout_5">
-            <property name="leftMargin">
-             <number>5</number>
-            </property>
-            <property name="topMargin">
-             <number>5</number>
-            </property>
-            <property name="rightMargin">
-             <number>5</number>
-            </property>
-            <property name="bottomMargin">
-             <number>5</number>
-            </property>
             <item>
              <widget class="QCheckBox" name="autorange_checkbox">
               <property name="font">
@@ -1007,11 +740,19 @@
     <property name="title">
      <string>Edit</string>
     </property>
+    <addaction name="machine_configuration"/>
+    <addaction name="invert_mes"/>
+    <addaction name="autosave_data"/>
+    <addaction name="autosave_dir_prompt"/>
+    <addaction name="separator"/>
+    <addaction name="preferences"/>
    </widget>
    <widget class="QMenu" name="menuView">
     <property name="title">
      <string>View</string>
     </property>
+    <addaction name="pop_out_plot"/>
+    <addaction name="pop_out_table"/>
    </widget>
    <widget class="QMenu" name="menuAbout">
     <property name="title">
@@ -1075,6 +816,56 @@
   <action name="actionImport_Config">
    <property name="text">
     <string>Import Config</string>
+   </property>
+  </action>
+  <action name="machine_configuration">
+   <property name="text">
+    <string>Machine Configuration</string>
+   </property>
+  </action>
+  <action name="preferences">
+   <property name="text">
+    <string>Preferences</string>
+   </property>
+  </action>
+  <action name="pop_out_plot">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="text">
+    <string>Pop-out Plot</string>
+   </property>
+  </action>
+  <action name="pop_out_table">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="text">
+    <string>Pop-out Table</string>
+   </property>
+  </action>
+  <action name="autosave_data">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="checked">
+    <bool>true</bool>
+   </property>
+   <property name="text">
+    <string>Auto-log data?</string>
+   </property>
+  </action>
+  <action name="autosave_dir_prompt">
+   <property name="text">
+    <string>Change Auto-log Directory</string>
+   </property>
+  </action>
+  <action name="invert_mes">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="text">
+    <string>Invert Measurements</string>
    </property>
   </action>
  </widget>
