--- a/ui/mainwindow_mk2.ui
+++ b/ui/mainwindow_mk2.ui
@@ -428,7 +428,7 @@
            <number>5</number>
           </property>
           <item>
-           <widget class="QTableView" name="tableView"/>
+           <widget class="QTableWidget" name="table"/>
           </item>
           <item>
            <layout class="QHBoxLayout" name="horizontalLayout_3">
