--- a/ui/mainwindow_mk2.ui
+++ b/ui/mainwindow_mk2.ui
@@ -118,7 +118,7 @@
                <item>
                 <widget class="QDoubleSpinBox" name="pos_set_spinbox">
                  <property name="decimals">
-                  <number>4</number>
+                  <number>2</number>
                  </property>
                  <property name="minimum">
                   <double>-50000.000000000000000</double>
@@ -244,7 +244,7 @@
                <item>
                 <widget class="QDoubleSpinBox" name="start_set_spinbox">
                  <property name="decimals">
-                  <number>4</number>
+                  <number>2</number>
                  </property>
                  <property name="minimum">
                   <double>-9999.000000000000000</double>
@@ -283,7 +283,7 @@
                <item>
                 <widget class="QDoubleSpinBox" name="end_set_spinbox">
                  <property name="decimals">
-                  <number>4</number>
+                  <number>2</number>
                  </property>
                  <property name="minimum">
                   <double>-9999.000000000000000</double>
@@ -328,13 +328,16 @@
                   <number>4</number>
                  </property>
                  <property name="minimum">
-                  <double>-9999.000000000000000</double>
+                  <double>0.0001</double>
                  </property>
                  <property name="maximum">
                   <double>500000.000000000000000</double>
                  </property>
                  <property name="singleStep">
-                  <double>0.000100000000000</double>
+                  <double>0.01</double>
+                 </property>
+                 <property name="value">
+                    <double>0.1</double>
                  </property>
                 </widget>
                </item>
