--- a/ui/grating_input.ui
+++ b/ui/grating_input.ui
@@ -86,16 +86,16 @@
         <enum>QFrame::Raised</enum>
        </property>
        <layout class="QGridLayout" name="gridLayout_2">
-        <item row="1" column="1">
-         <widget class="QDoubleSpinBox" name="zero_offset_in">
-          <property name="decimals">
-           <number>4</number>
-          </property>
+        <item row="9" column="1">
+         <widget class="QDoubleSpinBox" name="min_pos_sbox">
           <property name="minimum">
-           <double>-500000.000000000000000</double>
+           <double>-9999.000000000000000</double>
           </property>
           <property name="maximum">
-           <double>500000.000000000000000</double>
+           <double>9999.000000000000000</double>
+          </property>
+          <property name="value">
+           <double>-40.000000000000000</double>
           </property>
          </widget>
         </item>
@@ -120,31 +120,23 @@
           </property>
          </widget>
         </item>
+        <item row="1" column="1">
+         <widget class="QDoubleSpinBox" name="zero_offset_in">
+          <property name="decimals">
+           <number>4</number>
+          </property>
+          <property name="minimum">
+           <double>-500000.000000000000000</double>
+          </property>
+          <property name="maximum">
+           <double>500000.000000000000000</double>
+          </property>
+         </widget>
+        </item>
         <item row="0" column="0">
          <widget class="QLabel" name="label">
           <property name="text">
            <string>Grating Density (&lt;i&gt;G&lt;/i&gt;)</string>
-          </property>
-         </widget>
-        </item>
-        <item row="0" column="2">
-         <widget class="QLabel" name="label_6">
-          <property name="text">
-           <string>lines/mm</string>
-          </property>
-         </widget>
-        </item>
-        <item row="2" column="0">
-         <widget class="QLabel" name="label_3">
-          <property name="text">
-           <string>Incidence Angle (&lt;i&gt;&amp;theta;&lt;/i&gt;&lt;sub&gt;inc&lt;/sub&gt;)</string>
-          </property>
-         </widget>
-        </item>
-        <item row="4" column="0">
-         <widget class="QLabel" name="label_4">
-          <property name="text">
-           <string>Arm Length (&lt;i&gt;L&lt;/i&gt;)</string>
           </property>
          </widget>
         </item>
@@ -169,20 +161,6 @@
           </property>
          </widget>
         </item>
-        <item row="5" column="1">
-         <widget class="QDoubleSpinBox" name="diff_order_in">
-          <property name="decimals">
-           <number>0</number>
-          </property>
-         </widget>
-        </item>
-        <item row="1" column="0">
-         <widget class="QLabel" name="label_2">
-          <property name="text">
-           <string>Zero Order Offset (&lt;i&gt;&amp;lambda;&lt;/i&gt;&lt;sub&gt;0&lt;/sub&gt;)</string>
-          </property>
-         </widget>
-        </item>
         <item row="2" column="1">
          <widget class="QDoubleSpinBox" name="incidence_angle_in">
           <property name="minimum">
@@ -203,6 +181,20 @@
           </property>
          </widget>
         </item>
+        <item row="0" column="2">
+         <widget class="QLabel" name="label_6">
+          <property name="text">
+           <string>lines/mm</string>
+          </property>
+         </widget>
+        </item>
+        <item row="5" column="1">
+         <widget class="QDoubleSpinBox" name="diff_order_in">
+          <property name="decimals">
+           <number>0</number>
+          </property>
+         </widget>
+        </item>
         <item row="3" column="2">
          <widget class="QLabel" name="label_11">
           <property name="text">
@@ -213,10 +205,86 @@
         <item row="0" column="1">
          <widget class="QComboBox" name="grating_combo_2"/>
         </item>
-        <item row="6" column="1">
+        <item row="11" column="1">
          <widget class="QPushButton" name="update_conf_btn">
           <property name="text">
            <string>Update Configuration</string>
+          </property>
+         </widget>
+        </item>
+        <item row="2" column="0">
+         <widget class="QLabel" name="label_3">
+          <property name="text">
+           <string>Incidence Angle (&lt;i&gt;&amp;theta;&lt;/i&gt;&lt;sub&gt;inc&lt;/sub&gt;)</string>
+          </property>
+         </widget>
+        </item>
+        <item row="1" column="0">
+         <widget class="QLabel" name="label_2">
+          <property name="text">
+           <string>Zero Order Offset (&lt;i&gt;&amp;lambda;&lt;/i&gt;&lt;sub&gt;0&lt;/sub&gt;)</string>
+          </property>
+         </widget>
+        </item>
+        <item row="4" column="0">
+         <widget class="QLabel" name="label_4">
+          <property name="text">
+           <string>Arm Length (&lt;i&gt;L&lt;/i&gt;)</string>
+          </property>
+         </widget>
+        </item>
+        <item row="9" column="2">
+         <widget class="QLabel" name="label_16">
+          <property name="text">
+           <string>nm</string>
+          </property>
+         </widget>
+        </item>
+        <item row="9" column="0">
+         <widget class="QLabel" name="label_15">
+          <property name="text">
+           <string>Minimum Allowed Position</string>
+          </property>
+         </widget>
+        </item>
+        <item row="7" column="2">
+         <widget class="QLabel" name="label_14">
+          <property name="text">
+           <string>nm</string>
+          </property>
+         </widget>
+        </item>
+        <item row="7" column="1">
+         <widget class="QDoubleSpinBox" name="max_pos_sbox">
+          <property name="minimum">
+           <double>-9999.000000000000000</double>
+          </property>
+          <property name="maximum">
+           <double>9999.000000000000000</double>
+          </property>
+          <property name="value">
+           <double>600.000000000000000</double>
+          </property>
+         </widget>
+        </item>
+        <item row="7" column="0">
+         <widget class="QLabel" name="label_13">
+          <property name="text">
+           <string>Maximum Allowed Position</string>
+          </property>
+         </widget>
+        </item>
+        <item row="6" column="0" colspan="3">
+         <widget class="Line" name="line">
+          <property name="orientation">
+           <enum>Qt::Horizontal</enum>
+          </property>
+         </widget>
+        </item>
+        <item row="10" column="0" colspan="3">
+         <widget class="Line" name="line_2">
+          <property name="orientation">
+           <enum>Qt::Horizontal</enum>
           </property>
          </widget>
         </item>
