--- a/ui/mainwindow_mk2.ui
+++ b/ui/mainwindow_mk2.ui
@@ -160,6 +160,7 @@
                   <font>
                    <family>Segoe UI Semibold</family>
                    <pointsize>12</pointsize>
+                   <underline>false</underline>
                   </font>
                  </property>
                  <property name="text">
@@ -418,7 +419,7 @@
          </widget>
         </item>
         <item>
-         <layout class="QVBoxLayout" name="verticalLayout_2" stretch="1,0,0">
+         <layout class="QVBoxLayout" name="verticalLayout_2" stretch="5,0,0">
           <property name="leftMargin">
            <number>5</number>
           </property>
@@ -432,7 +433,14 @@
            <number>5</number>
           </property>
           <item>
-           <widget class="QTableWidget" name="table"/>
+           <widget class="QFrame" name="table_frame">
+            <property name="frameShape">
+             <enum>QFrame::StyledPanel</enum>
+            </property>
+            <property name="frameShadow">
+             <enum>QFrame::Raised</enum>
+            </property>
+           </widget>
           </item>
           <item>
            <layout class="QHBoxLayout" name="horizontalLayout_9">
