Implemented manually chosen device port booting, fixed some issues with the device manager, now allows choosing dummy mode in the device manager, changed middleware/drivers to better deal with dummy activation.

--- a/ui/device_manager.ui
+++ b/ui/device_manager.ui
@@ -221,9 +221,15 @@
              </widget>
             </item>
             <item>
-             <widget class="QPushButton" name="ret_button">
+             <widget class="QCheckBox" name="dum_checkbox">
+              <property name="font">
+               <font>
+                <family>Segoe UI</family>
+                <pointsize>10</pointsize>
+               </font>
+              </property>
               <property name="text">
-               <string>Retry Auto-Connect</string>
+               <string>Dummy Mode</string>
               </property>
              </widget>
             </item>
